css/style.css
body {
  width: 900px;
  margin: auto;
}

header {
  width: 900px;
  padding-top: 30px;
  padding-bottom: 15px;
  border-image: url(../img/border-img.png) 0 0 12 0 round;
  border-bottom: 12px;
  margin-bottom: 20px;
}

hr {
  padding: 0;
  border: none;
  border-top: 1px solid #a8b2bb;
  color: #333;
  margin-bottom: 40px;
  width: 900px;
  margin-top: 40px;
}

input[type="checkbox"] {
  display: inline-block;
  width: 12px;
  height: 12px;
  margin:-1px 4px 0 0;
  vertical-align: middle;
  background: url(../img/checkbox-bg.png);
  cursor: pointer;
}

footer {
  text-align: center;
  font-family: 'Slabo 27px', serif;
  font-size: .95em;
  letter-spacing: -0.2px;
}

footer p {
  margin-bottom: -10px;
  color: #a8b2bb;
}

.social {
  position: absolute;
  display: inline-block;
  right: 182px;
  top: 38px;
}

.social li {
  display: inline;
  margin-left: -2px;
}

.social img {
  height: 24px;
  width: 24px;
}

.rss {
  padding-left: 8px;
}

.logo {
  float: left;
}

.title {
  font-family: 'Yellowtail', cursive;
  font-size: 2.5em;
  position: absolute;
  top: -27px;
}

.slogan {
  font-family: 'Abel', sans-serif;
  text-transform: uppercase;
  font-size: 0.8em;
  color: black;
  letter-spacing: -0.5px;
  position: relative;
  top: -3px;
  left: 3px;
  color: #595959;
}

header p {
  position: relative;
  left: 5px;
}

.recipe-title {
  font-family: "Oswald";
  font-weight: lighter;
}

.post-date, .print-block p {
  font-family: "Abel", sans-serif;
  text-transform: uppercase;
  font-size: 0.8em;
  color: gray;
}

.post-date {
  position: relative;
  bottom: 25px;
  color: #a8b2bb;
}

.print-block {
  width: auto;
  float: right;
  position: relative;
  bottom: 67px;
}

.print-block p {
  font-size: 0.5em;
  display: inline;
  color: #a8b2bb;
}

.recipe-text {
  position: relative;
  bottom: 40px;
  font-family: 'Droid Serif', serif;
  color: gray;
}

.recipe-paragraph {
  text-indent: 30px;
  font-size: 1.04em;
  line-height: 22px;
}

.ingredients {
  height: 305px;
  background-image: url("../img/list-bg.png");
  background-repeat: no-repeat;
  width: 899px;
  position: relative;
  bottom: 20px;
  border-image: url(../img/border-img.png) 0 0 12 0 round;
  border-bottom: 12px;
  padding-bottom: 25px;
}

.ingredients ul {
  display: inline-block;
  width: 350px;
  height: 305px;
  font-family: 'Patrick Hand', sans-serif;
  font-size: 1.53em;
  list-style-type: none;
  position: relative;
  top: 12px;
  color: gray;
  line-height: 31px;
}

.ingredients1 {
  float: left;
  margin-left: 20px;
}

.ingredients2 {
  float: right;
  margin-right: 50px;
}

.ingredients ul li span {
  padding-left: 10px;
}

.strikethrough:checked + span {
  text-decoration:line-through;
}

.author h1, .author p {
    font-family: 'Droid Serif', serif;
    display: inline-block;
    position: relative;
    padding-left: 20px;
    font-size: 1em;
}

.author p {
  color: gray;
  width: 600px;
  bottom: 25px;
}

.author h1 {
  bottom: 10px;
}

.author h2 {
  float: right;
  display: inline-block;
  height: 40px;
  width: 150px;
  padding-left: 40px;
  padding-top: 13px;
  font-family: 'Abel', sans-serif;
  font-size: 1.2em;
  letter-spacing: -0.2px;
  position: relative;
  background-color: #bc7058;
  bottom: 62px;
  color: #feffff;
  text-transform: none;
}

.author img {
  float: left;
}

hr:after {
    content: url(../img/small-logo.png);
    display: inline-block;
    position: relative;
    top: -0.7em;
    font-size: 1.5em;
    padding: 0 0.25em;
    background: white;
}

